--- a/app/src/main/res/layout/activity_image_show.xml
+++ b/app/src/main/res/layout/activity_image_show.xml
@@ -9,12 +9,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnFilter"
-        android:layout_width="wrap_content"
+    <com.yk.mediademo.ui.widget.FilterView
+        android:id="@+id/filterView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom"
-        android:text="Filter"
-        android:textAllCaps="false" />
+        android:layout_gravity="bottom" />
 
 </FrameLayout>
