feat：完善转场特效功能，新增混合转场特效

--- a/app/src/main/res/layout/activity_image_transition.xml
+++ b/app/src/main/res/layout/activity_image_transition.xml
@@ -9,4 +9,10 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
 
+    <com.yk.mediademo.ui.widget.TransitionListView
+        android:id="@+id/transitionListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true" />
+
 </RelativeLayout>
