feat：增加解码YUV功能

--- a/app/src/main/res/layout/activity_yuv.xml
+++ b/app/src/main/res/layout/activity_yuv.xml
@@ -38,6 +38,18 @@
             android:layout_height="wrap_content"
             android:text="Stop Encode" />
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnDecode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Decode" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnStopDecode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Stop Decode" />
+
     </LinearLayout>
 
 </RelativeLayout>
